# mcu

./: README.md
01-blink/: .main.c.swp  CMakeLists.txt  main.c
02-control/: CMakeLists.txt  main.c
02-control/led-task/: led-task.c  led-task.h
02-control/protocol-task/: protocol-task.c  protocol-task.h
02-control/stdio-task/: stdio-task.h
02-echo/: CMakeLists.txt  main.c
02-printf/: CMakeLists.txt  main.c
03-adc/: CMakeLists.txt  get_adc.py  main.c
03-adc/adc-task/: adc-task.c  adc-task.h
03-adc/led-task/: led-task.c
03-adc/protocol-task/: protocol-task.c
03-adc/stdio-task/: stdio-task.c
04-bme/: CMakeLists.txt  main.c
libs/bme280-driver/: CMakeLists.txt
libs/bme280-driver/include/: bme280-driver.h
libs/bme280-driver/src/: bme280-driver.c
libs/protocol/: CMakeLists.txt
libs/protocol/src/: protocol-task.c
